@startuml Database ER Diagram
!theme plain

title Asset Simulator - Database Entity Relationship Diagram

' --- Entities ---
entity "users" as users {
  * id : uuid <<PK>>
  --
  * email : string
  --
  created_at : timestamp
}

entity "journal_accounts" as journal_accounts {
  * id : string <<PK>>
  --
  * name : string
  * category : string
  * balance : numeric
  * include_in_summary : boolean
  * user_id : uuid <<FK>>
  --
  created_at : timestamp
  updated_at : timestamp
}

entity "journal_entries" as journal_entries {
  * id : string <<PK>>
  --
  * date : date
  * description : string
  * debit_account_id : string <<FK>>
  * credit_account_id : string <<FK>>
  * amount : numeric
  * user_id : uuid <<FK>>
  --
  created_at : timestamp
  updated_at : timestamp
}

entity "regular_journal_entries" as regular_journal_entries {
  * id : string <<PK>>
  --
  * name : string
  description : string
  * debit_account_id : string <<FK>>
  * credit_account_id : string <<FK>>
  amount : numeric
  * frequency : string
  start_date : date
  end_date : date
  date_of_year : string
  date_of_month : integer
  holiday_div_of_month : string
  mon_flg_of_week : boolean
  tue_flg_of_week : boolean
  wed_flg_of_week : boolean
  thu_flg_of_week : boolean
  fri_flg_of_week : boolean
  sat_flg_of_week : boolean
  sun_flg_of_week : boolean
  public_holiday_ex_flg_of_week : boolean
  last_executed_date : date
  * user_id : uuid <<FK>>
  --
  created_at : timestamp
  updated_at : timestamp
}

entity "schedule_events" as schedule_events {
  * event_id : string <<PK>>
  --
  * title : string
  * all_day_flg : boolean
  * start_date : date
  start_time : string
  * end_date : date
  end_time : string
  description : string
  * user_id : uuid <<FK>>
  --
  created_at : timestamp
}

entity "goals" as goals {
  * id : string <<PK>>
  --
  * name : string
  * period : string
  * amount : numeric
  * user_id : uuid <<FK>>
  --
  created_at : timestamp
}

entity "goal_accounts" as goal_accounts {
  * goal_id : string <<PK>> <<FK>>
  * account_id : string <<PK>> <<FK>>
  --
  * user_id : uuid <<FK>>
  --
  created_at : timestamp
}

entity "accounts" as accounts {
  * id : string <<PK>>
  --
  * name : string
  * institution : string
  * branch_number : string
  * type : string
  * account_number : string
  * account_holder : string
  * user_id : uuid <<FK>>
}

entity "credit_cards" as credit_cards {
  * id : string <<PK>>
  --
  * name : string
  * closing_day : integer
  * payment_day : integer
  * linked_account_id : string <<FK>>
  * user_id : uuid <<FK>>
}

' --- Career Compass (career/) ---
' 資産シミュレーターのテーブルとはリレーションを持たず、users のみを共有する。
package "Career Compass (career/)" {
  entity "career_profiles" as career_profiles {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>> <<UQ>>
    full_name : string
    full_name_kana : string
    birth_date : date
    current_annual_income : numeric
    * target_annual_income : numeric
    job_change_target_date : date
    github_url / portfolio_url / blog_url : string
  }

  entity "career_skills" as career_skills {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>>
    * category : string
    * name : string
    * level : integer
    years_of_experience : numeric
    last_used_on : date
    * is_core : boolean
  }

  entity "career_experiences" as career_experiences {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>>
    * company_name : string
    * employment_type : string
    * started_on : date
    ended_on : date
    job_title : string
    annual_income : numeric
  }

  entity "career_projects" as career_projects {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>>
    experience_id : string <<FK>>
    * name : string
    role : string
    team_size : integer
    challenge / action / result : string
    impact_metric : string
    tech_stack : text[]
    phases : text[]
    * is_highlighted : boolean
  }

  entity "career_educations" as career_educations {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>>
    * school_name : string
    faculty : string
    started_on / ended_on : date
    * status : string
  }

  entity "career_certifications" as career_certifications {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>>
    * name : string
    issuer : string
    acquired_on / expires_on : date
    score : string
  }

  entity "career_highlights" as career_highlights {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>>
    * kind : string
    title : string
    body : string
    * is_default : boolean
  }

  entity "career_preferences" as career_preferences {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>> <<UQ>>
    desired_job_titles : text[]
    desired_industries : text[]
    desired_tech_stack : text[]
    income_floor : numeric
    * desired_income_ideal : numeric
    desired_locations : text[]
    * remote_preference : string
    desired_benefits : text[]
    must_have_conditions : text[]
  }

  entity "career_applications" as career_applications {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>>
    * company_name : string
    job_title : string
    * status : string
    income_range_min / income_range_max : numeric
    offered_income : numeric
    tech_stack : text[]
    benefits : text[]
  }

  entity "career_documents" as career_documents {
    * id : string <<PK>>
    --
    * user_id : uuid <<FK>>
    * kind : string
    * format : string
    title : string
    content : string
    application_id : string <<FK>>
    * generated_at : timestamp
  }
}

' --- Relationships ---
users ||--o{ journal_accounts : "user_id"
users ||--o{ journal_entries : "user_id"
users ||--o{ regular_journal_entries : "user_id"
users ||--o{ schedule_events : "user_id"
users ||--o{ accounts : "user_id"
users ||--o{ credit_cards : "user_id"
users ||--o{ goals : "user_id"
users ||--o{ goal_accounts : "user_id"

accounts ||--o| credit_cards : "linked_account_id"

journal_accounts ||--o{ journal_entries : "debit_account_id"
journal_accounts ||--o{ journal_entries : "credit_account_id"

journal_accounts ||--o{ regular_journal_entries : "debit_account_id"
journal_accounts ||--o{ regular_journal_entries : "credit_account_id"

goals ||--|{ goal_accounts : "goal_id"
journal_accounts ||--o{ goal_accounts : "account_id"

users ||--o| career_profiles : "user_id"
users ||--o| career_preferences : "user_id"
users ||--o{ career_skills : "user_id"
users ||--o{ career_experiences : "user_id"
users ||--o{ career_projects : "user_id"
users ||--o{ career_educations : "user_id"
users ||--o{ career_certifications : "user_id"
users ||--o{ career_highlights : "user_id"
users ||--o{ career_applications : "user_id"
users ||--o{ career_documents : "user_id"

career_experiences ||--o{ career_projects : "experience_id"
career_applications ||--o{ career_documents : "application_id"

' --- Notes ---
note top of users
  Supabase Auth の auth.users。
  アプリ側で新規作成する
  テーブルではない。
  他の全テーブルは user_id で
  行レベルセキュリティ(RLS)を
  適用する想定。
end note

note right of journal_entries
  複式簿記の仕訳コアテーブル。
  借方・貸方の両勘定科目を持つ。
  新規作成は RPC
  create_journal_entry 経由
  (残高更新も同時に行う)。
end note

note bottom of regular_journal_entries
  定期取引のテンプレート。
  frequency: daily/weekly/monthly/yearly/free
  holiday_div_of_month は
  'before'/'after'/'none' の文字列。
  last_executed_date で
  同日の重複実行を防止する。
  実行すると journal_entries が
  1件生成される。
end note

note left of journal_accounts
  勘定科目マスタ。
  Categories: Asset, Liability,
  Equity, Revenue, Expense。
  balance は仕訳から更新される。
end note

note bottom of schedule_events
  カレンダー上のスケジュール
  イベント（給料日・支払日等の
  リマインド用）。仕訳とは独立。
end note

note bottom of goals
  対象勘定科目(goal_accounts)の
  合計に対する期間(日次/月次)ごと
  の支出目標。
  period: 'day'/'month'。
  name が空の場合は UI 側で対象
  科目名から表示名を生成する。
  goals + goal_accounts の保存は
  RPC save_goal で一括して行う。
  対象科目が 0 件になった目標は
  トリガーで削除される。
end note

note bottom of accounts
  金融口座マスタ。型定義のみ存在し、
  現行 UI からは未使用
  （journal_accounts の
  isSystemAccount 判定で
  "acc_" プレフィックスのみ参照）。
end note

note bottom of credit_cards
  クレジットカードマスタ。型定義のみ
  存在し、現行 UI からは未使用
  （"card_" プレフィックスのみ参照）。
end note

' --- Categories ---
package "Enums" {
  enum AccountCategory {
    Asset
    Liability
    Equity
    Revenue
    Expense
  }

  enum RecurrenceFrequency {
    daily
    weekly
    monthly
    yearly
    free
  }

  enum HolidayDivOfMonth {
    none
    before
    after
  }
}

journal_accounts --> AccountCategory
regular_journal_entries --> RecurrenceFrequency
regular_journal_entries --> HolidayDivOfMonth

' --- Views / RPC (documentation only, not physical tables) ---
note as ViewNote
  VIEW: v_journal_entries_for_calendar
  journal_entries に借方/貸方の
  勘定科目名・カテゴリを JOIN 済み。
  カレンダー表示専用。

  RPC: fn_balance_sheet(p_user_id, p_end_date)
  RPC: fn_profit_loss(p_user_id, p_start_date, p_end_date)
  どちらも user_id, account_id, category,
  name, sum_amount の集計行を返す。
end note

journal_entries .. ViewNote

@enduml
